Change log
==========

1.3 (unreleased)
----------------
- fakeldap: Add email characters and some non-ASCII characters to
  FLTR_RE, to be able to use them in searches. (Stefan Holek)

- fakeldap: Add unbind_s API. (Stefan Holek)

- fakeldap: Deep-copy entries before returning them. (Stefan Holek)

- fakeldap: Only return requested attributes. (Stefan Holek)

- fakeldap: Optionally disable password hashing. (Stefan Holek)

- fakeldap: Optionally maintain the 'memberOf' attribute of group
  members. (Stefan Holek)

- connection: Clean up encoding and decoding of values for when the
  api_encoding is set to None. (Stefan Holek)

- connection: New 'raw' kwarg for the search API. If true, search
  results are returned in the ldap_encoding. (Stefan Holek)

- connection: Store a connection's bind_dn and bind_pwd as is, and
  encode them before use. (Stefan Holek)

- connection: Fix a condition that caused rebinding to fail if only
  one of bind_dn and bind_pwd had changed. (Stefan Holek)

- connection: Add disconnect API. (Stefan Holek)

- connection: Allow to delete subsets from multi-valued attributes.
  (Stefan Holek)

- switched documentation to point to the new Git repository


1.2 (2010-08-09)
----------------
- Using ``id()`` is not random enough for a unique hash.


1.1 (2010-05-09)
----------------
- Updated Sphinx Makefile and configuration to be closer
  to the latest Sphinx version

- Greatly expand installation and testing documentation using
  ideas from Tres Seaver


1.0 (2010-04-12)
----------------
- Bug: fakeldap.FakeLDAPConnection wildcard searches did not 
  work correctly and returned too many matches.

- Bug: Improve behavior matching of standard python-ldap and 
  fakeldap by raising ldap.NO_SUCH_OBJECT where operations 
  target non-existing entries.

- Bug: Improve behavior matching of standard python-ldap and 
  fakeldap by raising ldap.ALREADY_EXISTS where operations 
  duplicate existing entries.
