@@ -3,6 +3,8 @@ Change log
 
 1.3 (unreleased)
 ----------------
+- Update bootstrap.py to what ships with zc.buildout 1.5.2
+
 - fakeldap: Add email characters and some non-ASCII characters to
   FLTR_RE, to be able to use them in searches. (Stefan Holek)
 
